[gd_scene load_steps=5 format=3 uid="uid://d1leysh5p61ri"]

[ext_resource type="Texture2D" uid="uid://k8xeut35k7yd" path="res://images/dice/red/physical/single/map.png" id="1"]
[ext_resource type="Script" path="res://objects/PlayerPanel.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bd24xglp0g50j" path="res://images/players/default.png" id="3"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("1")
region = Rect2(0, 0, 64, 64)

[node name="PlayerPanel" type="Container"]
script = ExtResource("2")

[node name="PlayerPanel" type="ColorRect" parent="."]
layout_mode = 2
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="DicePanel" type="CenterContainer" parent="PlayerPanel" groups=["players"]]
layout_mode = 0

[node name="Dice" type="TextureButton" parent="PlayerPanel/DicePanel"]
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = SubResource("1")

[node name="PicturePanel" type="CenterContainer" parent="PlayerPanel" groups=["players"]]
layout_mode = 0

[node name="Picture" type="TextureButton" parent="PlayerPanel/PicturePanel"]
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource("3")

[node name="HealthPanel" type="GridContainer" parent="PlayerPanel"]
layout_mode = 0
columns = 5

[node name="StatusPanel" type="Panel" parent="PlayerPanel"]
layout_mode = 0

[node name="NamePanel" type="CenterContainer" parent="PlayerPanel"]
layout_mode = 0

[node name="PlayerName" type="Label" parent="PlayerPanel/NamePanel"]
layout_mode = 2
offset_right = 1.0
offset_bottom = 23.0

[connection signal="pressed" from="PlayerPanel/DicePanel/Dice" to="." method="_on_Dice_pressed"]
